[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://squish/atacar/0.png" type="Texture" id=2]
[ext_resource path="res://squish/atacar/1.png" type="Texture" id=3]
[ext_resource path="res://squish/atacar/2.png" type="Texture" id=4]
[ext_resource path="res://squish/atacar/3.png" type="Texture" id=5]
[ext_resource path="res://squish/atacar/4.png" type="Texture" id=6]
[ext_resource path="res://squish/andar/1.png" type="Texture" id=7]
[ext_resource path="res://squish/andar/2.png" type="Texture" id=8]
[ext_resource path="res://squish/andar/3.png" type="Texture" id=9]
[ext_resource path="res://squish/andar/4.png" type="Texture" id=10]
[ext_resource path="res://squish/andar/5.png" type="Texture" id=11]
[ext_resource path="res://squish/andar/6.png" type="Texture" id=12]
[ext_resource path="res://squish/andar/7.png" type="Texture" id=13]
[ext_resource path="res://squish/andar/8.png" type="Texture" id=14]
[ext_resource path="res://squish/andar/9.png" type="Texture" id=15]
[ext_resource path="res://squish/subir/1.png" type="Texture" id=16]
[ext_resource path="res://squish/subir/2.png" type="Texture" id=17]
[ext_resource path="res://squish/subir/3.png" type="Texture" id=18]
[ext_resource path="res://squish/subir/4.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "atacar",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "andar",
"speed": 12.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "subir",
"speed": 6.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.7149, 29.6625 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.3942, 38.9815 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.297, 37.2541 )

[sub_resource type="RayShape2D" id=5]
length = 33.2903

[node name="Player" type="KinematicBody2D"]
position = Vector2( 225.492, 382.659 )
scale = Vector2( 1.00427, 1.4174 )
script = ExtResource( 1 )

[node name="player" type="AnimatedSprite" parent="."]
position = Vector2( -4, 12.5 )
scale = Vector2( 0.508353, 0.370506 )
frames = SubResource( 1 )
animation = "andar"
frame = 9

[node name="Corpo" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 0, -101.475 )
current = true

[node name="identificaTeto" type="RayCast2D" parent="."]
position = Vector2( 0, -27 )
scale = Vector2( 0.635434, 1.03478 )
enabled = true
cast_to = Vector2( 0, -7 )
collision_mask = 3

[node name="parar" type="RayCast2D" parent="."]
scale = Vector2( 0.635434, 1.03478 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 3

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.467216, 0.0821075 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.85, 0 )
shape = SubResource( 3 )

[node name="matarInimigo" type="Area2D" parent="."]
position = Vector2( 0, 5.069 )

[node name="alcance" type="CollisionShape2D" parent="matarInimigo"]
shape = SubResource( 4 )

[node name="identificaTeto2" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 2

[node name="alcance" type="CollisionShape2D" parent="identificaTeto2"]
rotation = 3.13814
shape = SubResource( 5 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="matarInimigo" to="." method="_on_matarInimigo_body_entered"]
